# OCR_LLM_Refinement

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  evaluation.yaml  llm.yaml  ocr.yaml
data/samples/: sample_ground_truth.json  sample_ocr_input.json
notebooks/: 01_dataset_exploration.ipynb  02_ocr_error_analysis.ipynb  03_risk_scoring_analysis.ipynb
scripts/: evaluate_baseline.py  generate_highlighted_output.py  run_ollama_model_sweep.py  run_sample_pipeline.py
src/: __init__.py  main.py
src/correction/: __init__.py  base.py  factory.py  gemini_corrector.py  iterative_refinement.py  mock_corrector.py  ollama_corrector.py  provider_common.py  provider_parsing.py
src/evaluation/: __init__.py  experiments.py  metrics.py
src/ocr/: __init__.py  base.py  engine.py
src/pipeline/: __init__.py  run_pipeline.py
src/prompts/: correction_prompt.txt  risk_estimation_prompt.txt
src/review/: __init__.py  feedback.py  highlighter.py
src/risk/: __init__.py  calibrator.py  scorer.py
src/utils/: io.py  logging_utils.py  text_alignment.py
tests/: test_corrector_providers.py  test_mock_corrector.py  test_ocr.py  test_pipeline.py  test_risk_scorer.py
